nav bar; auth guard; AfterViewInit for login.comp

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,6 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<app-navigation></app-navigation>
 
 <router-outlet></router-outlet>
