--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,8 +1,3 @@
-<p>login works!</p>
-
-<button mat-raised-button color="primary" routerLink="/home">
-    Home
-</button>
 
 <mat-card>
     <form [formGroup]="loginForm" (ngSubmit)="loginUser()" type="">
@@ -20,7 +15,7 @@
         </p>
 
         <div *ngIf="firebaseErrorMessage != ''" class="error-style"> 
-            <span>{{ firebaseErrorMessage }}</span>
+            <span>Wrong email or password :(</span>
         </div>
 
         <button mat-raised-button color="primary" type="submit">Login</button>
