--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -4,7 +4,7 @@
         Login
     </button>
 
-    <button *ngIf="(fbAuth.user | async)" mat-raised-button color="primary" (click)="logout()">
+    <button *ngIf="(fbAuth.user | async)" mat-raised-button color="primary" style="background-color: brown;" (click)="logout()">
         Log out
     </button>
 
