--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
-
 html, body { 
     height: 100%; 
 }
 body { 
-    margin: 0; 
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
     font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 nav{
-    display: flex;
-    justify-content: center;
     width: 100%;  
 }
