--- a/src/app/components/transaction-creating-dialog/transaction-creating-dialog.component.html
+++ b/src/app/components/transaction-creating-dialog/transaction-creating-dialog.component.html
@@ -8,7 +8,15 @@
         <option value="Daily">Daily</option>
         <option value="Monthly">Monthly</option>
       </select>
-    </mat-form-field> 
+    </mat-form-field>
+
+    <mat-form-field *ngIf="transaction.typeOfSpending === 'Monthly'">
+      <mat-label>Post transaction</mat-label>
+      <select matNativeControl name="posting" [(ngModel)]="transaction.posting" required>
+        <option value="true">True</option>
+        <option value="false">False</option>
+      </select>
+    </mat-form-field>
     
     <mat-form-field>
         <mat-label>Category of Transaction</mat-label>
