--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,11 +2,11 @@
     <h1>Welcome to your Budget Management App!</h1>
     <p>Here are some quick stats:</p>
 
-    <button mat-raised-button (click)="openBudgetCreatingDialog()">Create Budget</button>
+    <button mat-raised-button class="create_btn" (click)="openBudgetCreatingDialog()">Create Budget</button>
 
-    <button mat-raised-button (click)="openBudgetDeleteByNameDialog()">Delete Budget</button>
+    <button mat-raised-button class="delete_btn" (click)="openBudgetDeleteByNameDialog()">Delete Budget</button>
 
-    <button mat-raised-button (click)="openTransactionCreatingDialog()">Create transaction</button>
+    <button mat-raised-button class="delete_btn" (click)="openTransactionCreatingDialog()">Create transaction</button>
     
     <div class="stats-container" *ngIf="budget[0]">
         <div class="stat-card">
@@ -36,7 +36,7 @@
       
       <tbody>
         <tr *ngFor="let transaction of transactions">
-          <td>{{ transaction.date.toDate() | date: 'dd/MM/yyyy'}}</td>
+          <td>{{transaction.date.toDate() | date: 'dd/MM/yyyy'}}</td>
           <td>{{transaction.typeOfSpending}}</td>
           <td>{{transaction.posting}}</td>
           <td>{{transaction.amount}}</td>
