--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,8 +5,18 @@ body {
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    font-family: Roboto, "Helvetica Neue", sans-serif; }
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: aliceblue;
+}
 
+    
 nav{
     width: 100%;  
 }
+
+table{
+    border-radius: 1ch;
+    border-style: groove;
+}
+
+
