--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,44 +1,93 @@
 @use '@angular/material' as mat;
 
-$my-palette: mat.define-palette(mat.$indigo-palette);
+$primary-palette: (
+    50: #fafafa,
+    100: #f5f5f5,
+    200: #eeeeee,
+    300: #e0e0e0,
+    400: #bdbdbd,
+    500: #9e9e9e,
+    600: #757575,
+    700: #616161,
+    800: #424242,
+    900: #212121,
+    A100: #f5f5f5,
+    A200: #eeeeee,
+    A400: #bdbdbd,
+    A700: #616161,
+    contrast: (
+        50: #000000,    // black
+        100: #000000,   // black
+        200: #000000,   // black
+        300: #000000,   // black
+        400: #FFFFFF,   // white
+        500: #FFFFFF,   // white
+        600: #FFFFFF,   // white
+        700: #FFFFFF,   // white
+        800: #FFFFFF,   // white
+        900: #FFFFFF,   // white
+        A100: #000000,  // black
+        A200: #000000,  // black
+        A400: #FFFFFF,  // white
+        A700: #FFFFFF   // white
+    )
+);
+
+$secondary-palette: (
+    50: #fce4ec,
+    100: #f8bbd0,
+    200: #f48fb1,
+    300: #f06292,
+    400: #ec407a,
+    500: #e91e63,
+    600: #d81b60,
+    700: #c2185b,
+    800: #ad1457,
+    900: #880e4f,
+    A100: #ff80ab,
+    A200: #ff4081,
+    A400: #f50057,
+    A700: #c51162,
+    contrast: (
+        50: #000000,    // black
+        100: #000000,   // black
+        200: #FFFFFF,   // white
+        300: #FFFFFF,   // white
+        400: #FFFFFF,   // white
+        500: #FFFFFF,   // white
+        600: #FFFFFF,   // white
+        700: #FFFFFF,   // white
+        800: #FFFFFF,   // white
+        900: #FFFFFF,   // white
+        A100: #000000,  // black
+        A200: #FFFFFF,  // white
+        A400: #FFFFFF,  // white
+        A700: #FFFFFF   // white
+    )
+);
+
 
 html, body { 
     height: 100%; 
 }
 body { 
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
+    // margin: 0 auto;
+    // display: flex;
+    // justify-content: center;
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    // background-color: rgb(206, 240, 240);
-    width: 100%;
+    font-size: 16px;
+    background-color: mat.get-color-from-palette($primary-palette,50);
+    color: mat.get-color-from-palette($primary-palette,contrast 50);
+    //width: 100%;
 }
 
-$my-palette: (
-    100:    #D1C4E9,
-    200:    #B39DDB,
-    300:    #9575CD,
-    400:    #7E57C2,
-    500:    #673AB7,
-    600:    #5E35B1,
-    700:    #512DA8,
-    800:    #4527A0,
-    900:    #311B92,
-    A100:    #B388FF,
-    A200:    #7C4DFF,
-    A400:    #651FFF,
-    A700:    #6200EA,
- contrast: (
-   50: rgba(black, 0.87),
-   100: rgba(black, 0.87),
-   200: rgba(black, 0.87),
-   300: white,
-   // ... continues to 900
- )
-);
-    
-nav{
-    width: 100%;
+h1,h2,h3{
+    color: mat.get-color-from-palette($primary-palette,contrast 800);
+}
+
+.navBtns{
+    background-color: mat.get-color-from-palette($secondary-palette,400);
+    color: mat.get-color-from-palette($secondary-palette,contrast 400);
 }
 
 table{
@@ -48,43 +97,24 @@ table{
     text-align: center;
 }
 
-th{
-    // background-color: lightsteelblue;
-}
-
 .table-row-even{
-    // background-color: lightblue;
+    background-color: mat.get-color-from-palette($primary-palette,300);
+    color: mat.get-color-from-palette($primary-palette,contrast 300);
 }
 
-.table-row-odd{
-    // background-color: lightcyan;
+.table-row-odd, th{
+    background-color: mat.get-color-from-palette($primary-palette,400);
+    color: mat.get-color-from-palette($primary-palette,contrast 400);
 }
-
-.stats-container{
-    display: flexbox;
-    border-radius: 1ch;
-    border-style: groove;
-    // background-color: rgb(191, 223, 223);
-    padding: 1ch 1ch;
-    font-size: large;
-    font: bold;
-    font-style: italic;
-    // color: darkblue;
-}
-
-.stats-value{
-
-}
-
 
 .create_btn{
     border-radius: 2ch;
-    // background-color: aquamarine;
-    // color: dimgrey;
+    background-color: mat.get-color-from-palette($secondary-palette,400);
+    color: mat.get-color-from-palette($secondary-palette,contrast 400);
 }
 
 .delete_btn{
     border-radius: 2ch;
-    // background-color: orangered;
-    // color: azure;
+    background-color: mat.get-color-from-palette($secondary-palette,900);
+    color: mat.get-color-from-palette($secondary-palette,contrast 900);
 }
