correct styles, add icons, sorting by date - done

--- a/src/app/components/daily-spending/daily-spending.component.html
+++ b/src/app/components/daily-spending/daily-spending.component.html
@@ -1,8 +1,10 @@
 <br><div class="dashboard-container">
-    <h1>Daily Spending</h1>
 
-    <button mat-raised-button class="create_btn" (click)="openTransactionCreatingDialog()">Create transaction</button>
-    <br><br>
+    <button mat-raised-button class="create_btn" (click)="openTransactionCreatingDialog()">
+      <mat-icon>payment</mat-icon>
+      Create transaction
+    </button>
+    <br>
 
     <br>
     <h2>All Transactions</h2>
