--- a/src/styles.scss
+++ b/src/styles.scss
@@ -71,16 +71,16 @@ html, body {
     // margin: 0 auto;
     padding-left: 2ch;
     max-width: 375px;
+    min-width: 375px;
     display: flex;
     justify-content: center;
     height: 100%; 
 }
-body { 
-
+body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
     font-size: 16px;
-    background-color: mat.get-color-from-palette($primary-palette,50);
-    color: mat.get-color-from-palette($primary-palette,contrast 50);
+    background-color: mat.get-color-from-palette($primary-palette,100);
+    color: mat.get-color-from-palette($primary-palette,contrast 100);
 }
 
 h1,h2,h3{
