--- a/src/app/components/daily-spending/daily-spending.component.html
+++ b/src/app/components/daily-spending/daily-spending.component.html
@@ -12,23 +12,30 @@
     <table>
       <thead>
         <tr>
-          <th>Date</th>
-          <th>Description</th>
-          <th>Monthly</th>
-          <th>Amount</th>
-          <th>Caregory</th>
-          <th>Comment</th>
+          <th>
+            <mat-icon>calendar_today</mat-icon>
+          </th>
+          <th>
+            <mat-icon>date_range</mat-icon>
+            Monthly
+          </th>
+          <th>
+            <mat-icon>money</mat-icon>
+            Amount
+          </th>
+          <th>
+            <mat-icon>subject</mat-icon>
+            Caregory
+          </th>
         </tr>
       </thead>
       
       <tbody>
-        <tr *ngFor="let transaction of transactions, let even = even" [ngClass]="{'table-row-even':even,'table-row-odd':!even}">
+        <tr *ngFor="let transaction of transactions, let even = even" [ngClass]="{'table-row-even':even,'table-row-odd':!even}" (click)="getTransactionInfo(transaction)">
           <td>{{transaction.date.toDate() | date: 'dd/MM'}}</td>
-          <td>{{transaction.typeOfSpending}}</td>
           <td>{{transaction.posting}}</td>
           <td>{{transaction.amount}}</td>
           <td>{{transaction.category}}</td>
-          <td>{{transaction.comment}}</td>
         </tr>
       </tbody>
     </table>
