--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-  <mat-sidenav-container>
+  <mat-sidenav-container class="navigation">
   <mat-sidenav #sidenav>
       <mat-nav-list style="padding-left: 2ch;">
         <button mat-item mat-icon-button (click)="sidenav.toggle()">
@@ -6,23 +6,18 @@
         </button>
         <button mat-item mat-icon-button routerLink="/dashboard" (click)="sidenav.toggle()">
           <mat-icon>account_balance</mat-icon>
-          <!-- <span>Dashboard</span> -->
         </button>
         <button mat-item mat-icon-button routerLink="/daily" (click)="sidenav.toggle()">
           <mat-icon>today</mat-icon>
-          <!-- <span>Daily Spending</span> -->
         </button>
         <button mat-item mat-icon-button routerLink="/monthly" (click)="sidenav.toggle()">
           <mat-icon>date_range</mat-icon>
-          <!-- <span>Monthly Spending</span> -->
         </button>
         <button mat-item mat-icon-button routerLink="/balance" (click)="sidenav.toggle()">
           <mat-icon>account_balance_wallet</mat-icon>
-          <!-- <span>Free Balance</span> -->
         </button>
         <button mat-item mat-icon-button routerLink="/incomes" (click)="sidenav.toggle()">
           <mat-icon>attach_money</mat-icon>
-          <!-- <span>Incomes </span> -->
         </button>
       </mat-nav-list>
     </mat-sidenav>
@@ -32,11 +27,11 @@
           <mat-icon>menu</mat-icon>
         </button>
         <span>{{pageTitle}}</span>
-        <button *ngIf="!(fbAuth.user | async)" mat-raised-button routerLink="/login">
+        <button *ngIf="!(fbAuth.user | async)" class="right" mat-raised-button routerLink="/login">
           <mat-icon>meeting_room</mat-icon>
           Login
         </button>
-        <button *ngIf="(fbAuth.user | async)" mat-raised-button style="background-color: #f50057;" (click)="logout()">
+        <button *ngIf="(fbAuth.user | async)" class="right" mat-raised-button style="background-color: #f50057;" (click)="logout()">
           <mat-icon>no_meeting_room</mat-icon>
           Log out
         </button>
