--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -1,18 +1,12 @@
 @use '@angular/material' as mat;
 @import '/src/styles.scss';
 
-mat-toolbar {
-    display: flex;
-    justify-content: space-between;
-  }
-
-mat-sidenav{
-  padding-right: 5ch;
+.navigation{
+  display: flow-root;
+  width: 100%;
+  min-width: 375px !important; /* adjust as needed */
 }
 
-button{
-  font-size: 16px;
-}
 
 .right {
     margin-left: auto;
