--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,14 +68,14 @@ $secondary-palette: (
 
 
 html, body { 
-    // margin: 0 auto;
+    margin: 0 auto;
     padding-left: 2ch;
-    max-width: 375px;
     min-width: 375px;
     display: flex;
     justify-content: center;
     height: 100%; 
 }
+
 body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
     font-size: 16px;
@@ -102,11 +102,13 @@ table{
 .table-row-even{
     background-color: mat.get-color-from-palette($primary-palette,300);
     color: mat.get-color-from-palette($primary-palette,contrast 300);
+    height: 36px;
 }
 
 .table-row-odd, th{
     background-color: mat.get-color-from-palette($primary-palette,400);
     color: mat.get-color-from-palette($primary-palette,contrast 400);
+    height: 36px;
 }
 
 .create_btn{
