installed linter, fixed errors

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
                 </mat-form-field>
             </p>
 
-            <div *ngIf="firebaseErrorMessage != ''" class="error-style"> 
+            <div *ngIf="firebaseErrorMessage !== ''" class="error-style"> 
                 <span>Wrong email or password :(</span>
             </div>
 
