filter transactions by date // daily spendings

--- a/src/app/components/transaction-creating-dialog/transaction-creating-dialog.component.html
+++ b/src/app/components/transaction-creating-dialog/transaction-creating-dialog.component.html
@@ -31,7 +31,7 @@
       <mat-form-field>
         <mat-label>Date of Transaction</mat-label>
         <input matInput [matDatepicker]="picker" name="date" [(ngModel)]="transaction.date" required>
-        <mat-hint>MM/DD/YYYY</mat-hint>  
+        <mat-hint>DD/MM/YYYY</mat-hint>  
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
       <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
