--- a/src/app/components/daily-spending/daily-spending.component.html
+++ b/src/app/components/daily-spending/daily-spending.component.html
@@ -8,6 +8,19 @@
 
     <br>
     <h2>All Transactions</h2>
+
+    <h3>Filter:</h3>
+    
+    <button mat-icon-button (click)="getDailyTransactions()"><mat-icon>not_interested</mat-icon></button>
+    <mat-form-field>
+      <mat-label>Date of Transaction</mat-label>
+      <input matInput [matDatepicker]="picker" name="date" [(ngModel)]="dateOfFilter" required>
+      <mat-hint>MM/DD/YYYY</mat-hint>  
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+    <button mat-icon-button (click)="getTransactionsByDate()"><mat-icon>search</mat-icon></button>
+    <br><br>    
     
     <table>
       <thead>
