filter by month

--- a/src/app/components/daily-spending/daily-spending.component.html
+++ b/src/app/components/daily-spending/daily-spending.component.html
@@ -19,7 +19,7 @@
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <button mat-icon-button (click)="getTransactionsByDate()"><mat-icon>search</mat-icon></button>
+    <button mat-icon-button (click)="getDailyTransactionsByDate()"><mat-icon>search</mat-icon></button>
     <br><br>    
     
     <table>
