--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -34,7 +34,7 @@
           <mat-icon>meeting_room</mat-icon>
           Login
         </button>
-        <button *ngIf="(fbAuth.user | async) !== null" class="right" mat-raised-button style="background-color: #f50057;" (click)="logout()">
+        <button *ngIf="(fbAuth.user | async) !== null" class="right" mat-raised-button color="warn" (click)="logout()">
           <mat-icon>no_meeting_room</mat-icon>
           Log out
         </button>
