--- a/src/app/components/transaction-info-dialog/transaction-info-dialog.component.html
+++ b/src/app/components/transaction-info-dialog/transaction-info-dialog.component.html
@@ -8,16 +8,18 @@
   <p><strong>Comment:</strong> {{transaction.comment}}</p>
 </div>
 
-<mat-form-field>
+<form #postingTransaction="ngForm">
+<mat-form-field *ngIf="transaction.typeOfSpending === 'Monthly'">
   <mat-label>Date of Posting</mat-label>
   <input matInput [matDatepicker]="picker" name="newDate" [(ngModel)]="newDate" required>
   <mat-hint>MM/DD/YYYY</mat-hint>  
   <mat-datepicker #picker></mat-datepicker>
   <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
 </mat-form-field>
-
+</form>
 
 <div mat-dialog-actions>
   <button mat-button (click)="onCancel()">Close</button>
-  <button mat-button color="primary" (click)="posting()">Posting</button>
+  <button mat-button color="warn" (click)="deleteTransaction()">Delete</button>
+  <button mat-button *ngIf="transaction.typeOfSpending === 'Monthly'" color="primary" [disabled]="!postingTransaction.valid" (click)="posting()">Posting</button>
 </div>
