--- a/src/app/components/transaction-creating-dialog/transaction-creating-dialog.component.html
+++ b/src/app/components/transaction-creating-dialog/transaction-creating-dialog.component.html
@@ -2,11 +2,11 @@
 <mat-dialog-content>
   <form #TransactionForm="ngForm">
 
-    <mat-form-field>
+    <mat-form-field appearance="fill" color="primary">
       <mat-label>Name of Budget</mat-label>
-      <select matNativeControl name="typeOfSpending" [(ngModel)]="transaction.budgetName" required>
-        <option value="main">main</option>
-      </select>
+      <mat-select matNativeControl name="budgetName" [(ngModel)]="transaction.budgetName" required>
+        <mat-option *ngFor="let item of budget" [value]="item.name">{{item.name}}</mat-option>
+      </mat-select>
     </mat-form-field>
 
     <mat-form-field>
