--- a/src/app/components/transaction-info-dialog/transaction-info-dialog.component.html
+++ b/src/app/components/transaction-info-dialog/transaction-info-dialog.component.html
@@ -1,5 +1,6 @@
 <h2 mat-dialog-title>Transaction Details</h2>
 <div mat-dialog-content>
+  <p><strong>Budget's Name:</strong> {{transaction.budgetName}}</p>
   <p><strong>Date:</strong> {{transaction.date.toDate() | date: 'dd/MM/yyyy'}}</p>
   <p><strong>Type of Spending:</strong> {{transaction.typeOfSpending}}</p>
   <p><strong>Posting:</strong> {{transaction.posting}}</p>
